# ansible-role-tripleo-reboot

./: .gitreview  README.md  setup.cfg
ansible-role-tripleo-reboot-overcloud/defaults/: main.yml
ansible-role-tripleo-reboot-overcloud/handlers/: main.yml
ansible-role-tripleo-reboot-overcloud/tasks/: main.yml  reboot-overcloud-compute.yml  reboot-overcloud-controller.yml  reboot-overcloud.yml
ansible-role-tripleo-reboot-overcloud/tests/: test.yml
ansible-role-tripleo-reboot-overcloud/vars/: main.yml
ansible-role-tripleo-reboot-undercloud/defaults/: main.yml
ansible-role-tripleo-reboot-undercloud/handlers/: main.yml
ansible-role-tripleo-reboot-undercloud/tasks/: main.yml  reboot-undercloud.yml
ansible-role-tripleo-reboot-undercloud/tests/: test.yml
ansible-role-tripleo-reboot-undercloud/vars/: main.yml
config/general_config/: minimal.yml
playbooks/: quickstart-extras.yml  quickstart.yml  tripleo-roles.yml
