[metadata]
name = ansible-role-tripleo-reboot
summary = ansible-role-tripleo-reboot - A ansible role to reboot tripleo undercloud and overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = skulkarn@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-reboot
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/defaults = ansible-role-tripleo-reboot-overcloud/defaults/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/handlers = ansible-role-tripleo-reboot-overcloud/handlers/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/meta = ansible-role-tripleo-reboot-overcloud/meta/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/tasks = ansible-role-tripleo-reboot-overcloud/tasks/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/templates = ansible-role-tripleo-reboot-overcloud/templates/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/files = ansible-role-tripleo-reboot-overcloud/files/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/tests = ansible-role-tripleo-reboot-overcloud/tests/*
    usr/local/share/ansible/roles/tripleo-overcloud-reboot/vars = ansible-role-tripleo-reboot-overcloud/vars/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/defaults = ansible-role-tripleo-reboot-undercloud/defaults/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/handlers = ansible-role-tripleo-reboot-undercloud/handlers/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/meta = ansible-role-tripleo-reboot-undercloud/meta/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/tasks = ansible-role-tripleo-reboot-undercloud/tasks/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/templates = ansible-role-tripleo-reboot-undercloud/templates/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/files = ansible-role-tripleo-reboot-undercloud/files/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/tests = ansible-role-tripleo-reboot-undercloud/tests/*
    usr/local/share/ansible/roles/tripleo-undercloud-reboot/vars = ansible-role-tripleo-reboot-undercloud/vars/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
